// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createDrillHeaders > should generate drill item containing all scoping attribute's headers and descriptors and measure from measure's data col 1`] = `
[
  {
    "attributeHeaderItem": {
      "name": "Exclude",
      "uri": "/gdc/md/referenceworkspace/obj/1062/elements?id=165680",
    },
  },
  {
    "attributeHeader": {
      "formOf": {
        "identifier": "attr.opportunitysnapshot.forecastcategory",
        "name": "Forecast Category",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1062",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1062",
      },
      "identifier": "label.opportunitysnapshot.forecastcategory",
      "localIdentifier": "a_label.opportunitysnapshot.forecastcategory",
      "name": "Forecast Category",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1063",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1063",
    },
  },
  {
    "attributeHeaderItem": {
      "name": "East Coast",
      "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
    },
  },
  {
    "attributeHeader": {
      "formOf": {
        "identifier": "attr.owner.region",
        "name": "Region",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1086",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1086",
      },
      "identifier": "label.owner.region",
      "localIdentifier": "a_label.owner.region",
      "name": "Region",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1087",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1087",
    },
  },
  {
    "measureHeaderItem": {
      "format": "$#,##0.00",
      "identifier": "aangOxLSeztu",
      "localIdentifier": "m_aangOxLSeztu",
      "name": "Amount",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1271",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1271",
    },
  },
]
`;

exports[`createDrillHeaders > should generate drill item containing both parent's and second level's group attribute and descriptor from second level group 1`] = `
[
  {
    "attributeHeaderItem": {
      "name": "Exclude",
      "uri": "/gdc/md/referenceworkspace/obj/1062/elements?id=165680",
    },
  },
  {
    "attributeHeader": {
      "formOf": {
        "identifier": "attr.opportunitysnapshot.forecastcategory",
        "name": "Forecast Category",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1062",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1062",
      },
      "identifier": "label.opportunitysnapshot.forecastcategory",
      "localIdentifier": "a_label.opportunitysnapshot.forecastcategory",
      "name": "Forecast Category",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1063",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1063",
    },
  },
  {
    "attributeHeaderItem": {
      "name": "East Coast",
      "uri": "/gdc/md/referenceworkspace/obj/1086/elements?id=460488",
    },
  },
  {
    "attributeHeader": {
      "formOf": {
        "identifier": "attr.owner.region",
        "name": "Region",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1086",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1086",
      },
      "identifier": "label.owner.region",
      "localIdentifier": "a_label.owner.region",
      "name": "Region",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1087",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1087",
    },
  },
]
`;

exports[`createDrillHeaders > should generate drill item containing first attribute's header and descriptor from first slice column 1`] = `
[
  {
    "attributeHeaderItem": {
      "name": "CompuSci",
      "uri": "/gdc/md/referenceworkspace/obj/1054/elements?id=165678",
    },
  },
  {
    "attributeHeader": {
      "formOf": {
        "identifier": "attr.product.id",
        "name": "Product",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1054",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1054",
      },
      "identifier": "label.product.id.name",
      "localIdentifier": "a_label.product.id.name",
      "name": "Product Name",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1055",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1055",
    },
  },
]
`;

exports[`createDrillHeaders > should generate drill item containing just first level group's attribute header and descriptor from first level group 1`] = `
[
  {
    "attributeHeaderItem": {
      "name": "Exclude",
      "uri": "/gdc/md/referenceworkspace/obj/1062/elements?id=165680",
    },
  },
  {
    "attributeHeader": {
      "formOf": {
        "identifier": "attr.opportunitysnapshot.forecastcategory",
        "name": "Forecast Category",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1062",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1062",
      },
      "identifier": "label.opportunitysnapshot.forecastcategory",
      "localIdentifier": "a_label.opportunitysnapshot.forecastcategory",
      "name": "Forecast Category",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1063",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1063",
    },
  },
]
`;

exports[`createDrillHeaders > should generate drill item containing second attribute's header and descriptor from second column 1`] = `
[
  {
    "attributeHeaderItem": {
      "name": "Direct Sales",
      "uri": "/gdc/md/referenceworkspace/obj/1088/elements?id=460487",
    },
  },
  {
    "attributeHeader": {
      "formOf": {
        "identifier": "attr.owner.department",
        "name": "Department",
        "ref": {
          "uri": "/gdc/md/referenceworkspace/obj/1088",
        },
        "uri": "/gdc/md/referenceworkspace/obj/1088",
      },
      "identifier": "label.owner.department",
      "localIdentifier": "a_label.owner.department",
      "name": "Department",
      "ref": {
        "uri": "/gdc/md/referenceworkspace/obj/1089",
      },
      "uri": "/gdc/md/referenceworkspace/obj/1089",
    },
  },
]
`;
